--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,43 @@
-appname = survey1
+appname = survey
 httpport = 8080
 runmode = dev
+
+sessionon = true
+
+# mysql
+# db_host = localhost
+# db_port = 3306
+# db_user = root
+# db_pass = root
+# db_name = admin
+# db_type mysql
+
+# postgresql
+db_host = localhost
+db_port = 5432
+db_user = kevin
+db_pass = nohacker
+db_name = admin
+db_type = postgres
+db_sslmode = disable
+
+# sqlite3
+# db_path = ./
+# db_name = admin
+# db_type = sqlite3
+
+rbac_role_table = role
+rbac_node_table = node
+rbac_group_table = group
+rbac_user_table = user
+# admin用户名，此用户登录不用认证
+rbac_admin_user = admin
+
+# 默认不需要认证模块
+not_auth_package = public,static
+# 默认认证类型 0 不认证 1 登录认证 2 实时认证
+user_auth_type = 1
+# 默认登录网关
+rbac_auth_gateway = /public/login
+# 默认模版
+template_type = easyui
