create user login

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -92,6 +92,10 @@ type = mysql
 site_name = 在线调研系统
 # 默认模版
 template_type = easyui
+# 超级管理员用户密码，密码采用md5加密
+admin_user = admin
+admin_realname = 超级管理员
+admin_pass = 21232f297a57a5a743894a0e4a801fc3
 
 [rbac]
 role_table = role
@@ -99,7 +103,8 @@ privilege_table = node
 group_table = group
 user_table = user
 # admin用户名，此用户登录不用认证
-# admin_user = admin
+admin_user = admin
+admin_pass = admin
 
 [auth]
 # 默认不需要认证模块
