--- a/conf/app.conf
+++ b/conf/app.conf
@@ -96,6 +96,8 @@ template_type = easyui
 admin_user = admin
 admin_realname = 超级管理员
 admin_pass = 21232f297a57a5a743894a0e4a801fc3
+# 上传文件夹
+uploads_dir = uploads
 
 [rbac]
 role_table = role
